--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.1.0",
+    "@angular/cdk": "^14.2.1",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
     "@angular/forms": "^14.1.0",
+    "@angular/material": "^14.2.1",
+    "@angular/material-moment-adapter": "^14.2.1",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@fortawesome/fontawesome-free": "^6.2.0",
+    "@types/uniqid": "^5.3.2",
+    "bootstrap": "^5.2.1",
+    "random": "^3.0.6",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uniqid": "^5.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -27,6 +35,7 @@
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "angular-cli-ghpages": "^1.0.3",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
